# python-package-template

./: .gitignore  Makefile  README.md  pyproject.toml
make_resources/: Makehelp  bootstrap.mk
